Footer stuck to the bottom now and NavBar fixed Z axis

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -1,6 +1,7 @@
 #add-list-btn {
 display: flex;
 justify-content: flex-end;
+margin: auto;
 margin-right: 45px;
 }
 
