--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -102,3 +102,10 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.above-lists-contents {
+  display: flex;
+  align-content: center;
+  align-items: baseline;
+  justify-content: space-between;
+}
