--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -25,6 +25,6 @@
   }
 }
 
-.container {
-  height: 100vh;
+.container-yield {
+  min-height: 100vh;
 }
