--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,7 +3,7 @@
   height: auto;
   position: sticky;
   top: 0px;
-
+  z-index: 1;
 }
 
 .nav-bar .navbar-collapse {
